python-test_driven_development/tests/5-text_indentation.txt
>>> text_indentation("""Hola: como estas? Que haces? te quiero mucho. y te amo tambien.""")
Hola:      

como estas?

Que haces?

te quiero mucho.

y te amo tambien.

>>> text_indentation()
Traceback (most recent call last):
...
TypeError: text_indentation() missing 1 required positional argument: 'text'

>>> text_indentation(None) 
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(588393) 
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(588393, "hola. hola: hola? hola!")
Traceback (most recent call last):
...
TypeError: text_indentation() takes 1 positional argument but 2 were given

>>> text_indentation("hola. hola: hola? hola! hOLAAA")  
hola.

hola:

hola?

hola! hOLAAA>>>

>>> text_indentation(".")                          
.

>>> text_indentation(".!!!:%%%?;;;")  
.

!!!:

%%%?

;;;>>>

>>> text_indentation("1800, 1700. O 1500? MAYBE 1000!")  
1800, 1700.

O 1500?

MAYBE 1000!>>>

>>> text_indentation(6.8)                                
Traceback (most recent call last):
...
TypeError: text must be a string

>>> text_indentation(....!!!??::,,,) 
  File "<stdin>", line 1
    text_indentation(....!!!??::,,,)
                         ^
SyntaxError: invalid syntax

>>> text_indentation("....!!!??::,,,")
.

.

.

.

!!!?

?

:

:

,,,>>>

